styles.css
*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: 'Roboto', sans-serif;
    font-family: 'Caveat', cursive;
    color: #342A21;
}

body {
    width: 100%;
    height: 100svh;

    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(11, 1fr);
    gap: .5rem;

    background-color: #f7f3ef;
    padding: 1rem;

    overflow: hidden;
}

.cell {
    border-radius: 10px;
    background-color: #efe9dc;
    padding: .5rem;
    display: grid;
    place-content: center;
    position: relative;
}

.cell:has(img) {
    display: block;
}

#background {
    grid-column: 1/4;
    grid-row: 2/6;
}

#background img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    border-radius: 5px;
}

h1 {
    font-family: 'Caveat', cursive;
    font-size: 4rem;
}

#title {
    grid-column: 1/4;
    grid-row: 1/2;
}

span {
    font-family: 'Roboto', sans-serif;
    text-align: center;
}

#description {
    grid-column: 1/4;
    grid-row: 6/9;

    padding: 1rem;
}

#description span {
    font-size: 1.5rem;
}

.cell.entry {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;
    gap: .5rem;
    font-size: .8rem;
}

#raven {
    background-color: #f7f3ef;
}

.grow {
    transition: all .15s ease-out;
}

.grow:hover {
    /* transform: scale(1.05); */
    box-shadow: 0 0 20px #342A2130;
}

a, a:visited {
    color: #342A21;
}

div:has(#email-form) {
    grid-column: 1/3;
    grid-row: 9/10;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

#email-input {
    border: none;
    background-color: transparent;
    font-size: 1rem;
    width: 100%;
}

div:has(#email-form):after {
    content: '';
    position: absolute;
    bottom: 25%;
    left: 5%;
    width: 90%;
    height: 2px;
    background-color: #342A21;
    border-radius: 20px;
}

#email-input:active,
#email-input:focus {
    border: 2px solid #342A21;
}

#email-button {
    grid-column: 3/4;
    grid-row: 9/10;
    background-color: #342A21;
    border: none;
    color: white;
    font-size: 1.5rem;
    cursor: pointer;
}

#email-form input::placeholder {
   color: #342A2160;
}

#pop-up {
    position: absolute;
    bottom: -150px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 100;

    padding: 1rem;
    /* background-color: #6b8e68; */
    background-color: #aebc89;
    color: #f4f3e6;
    border-radius: 10px;
    font-family: 'Roboto', sans-serif;
    width: calc(100vw - (2*1rem));
    max-width: 500px;

    display: grid;
    grid-template-columns: 1fr 15px;
    grid-template-rows: 1fr;
    box-shadow: 0 0 20px rgba(0,0,0,.2);
    gap: 1rem;
}

#pop-up.error {
    background-color: #ea8c84;
}

#cross {
    grid-column: 2/3;
    grid-row: 1/2;

    justify-self: flex-end;
}

#pop-up span {
    grid-column: 1/2;
    grid-row: 1/2;
    font-size: 1.2rem;
}

.show-up {
    animation: show-up .25s ease-out;
    animation-fill-mode: forwards;
}

@keyframes show-up {
    from {
        bottom: -150px;
    }

    to {
        bottom: 35px;
    }
}

.hide {
    animation: hide-pop-up .25s ease-out;
    animation-fill-mode: forwards;
}

@keyframes hide-pop-up {
    from {
        bottom: 35px;
    }

    to {
        bottom: -150px;
    }
}

@media (min-width: 768px) {
    body {
        grid-template-columns: repeat(5, 1fr);
        grid-template-rows: 120px repeat(2, 1fr) 70px 100px;
    }

    #background {
        grid-column: 1/4;
        grid-row: 2/4;
    }

    #title {
        grid-column: 2/6;
        grid-row: 1/2;
    }

    #description {
        grid-column: 4/6;
        grid-row: 2/4;
    }

    #description span {
        font-size: 2rem;
    }

    div:has(#email-input) {
        grid-column: 1/4;
        grid-row: 4/5;

        height: 70px;
    }

    #email-button {
        grid-column: 4/6;
        grid-row: 4/5;

        height: 70px;
    }

    #raven {
        grid-column: 1/2;
        grid-row: 1/2;
    }

    h1 {
        font-size: 5rem;
    }
}

@media (min-width: 1200px) {
    body {
        grid-template-columns: repeat(9, 1fr);
        grid-template-rows: repeat(3, 1fr) 70px repeat(2, 1fr);
    }

    #background {
        grid-column: 1/7;
        grid-row: 1/7;
    }

    #title {
        grid-column: 7/10;
        grid-row: 1/2;
    }

    #description {
        grid-column: 7/10;
        grid-row: 2/4;
    }

    div:has(#email-input) {
        grid-column: 7/9;
        grid-row: 4/5;
    }

    #email-button {
        grid-column: 9/10;
        grid-row: 4/5;
    }

    #raven {
        grid-column: 9/10;
        grid-row: 6/7;
    }
}

